syntax = "proto3";

option go_package = "chainguard.dev/driftlessaf/workqueue";

package chainguard.workqueue;

service WorkqueueService {
  rpc Process(ProcessRequest) returns (ProcessResponse) {}
  rpc GetKeyState(GetKeyStateRequest) returns (KeyState) {}
}

message ProcessRequest {
  // The key of the work item
  string key = 1;

  // The (optional) priority of the work item, where higher numbers are processed first.
  int64 priority = 2;

  // The (optional) delay in second to wait before processing the work item.
  int64 delay_seconds = 3;
}

message ProcessResponse {
  // Optional: If set, indicates the work item should be requeued after the specified delay.
  // If not set or 0, the default behavior applies (success if no error, or exponential backoff on error).
  // This field is only honored when the RPC returns successfully (no error).
  int64 requeue_after_seconds = 1;

  // Optional: Additional keys to queue as a result of processing this item.
  // These keys are queued BEFORE the current key is completed, ensuring dependent
  // work is guaranteed to be queued before we mark the triggering work as done.
  // If any queue operation fails, the current key will be retried.
  repeated QueueKeyRequest queue_keys = 2;
}

// QueueKeyRequest represents a key to be queued with optional priority and delay.
message QueueKeyRequest {
  // The key to queue.
  string key = 1;

  // Optional priority (default: 0). Higher values are processed first.
  int64 priority = 2;

  // Optional delay in seconds before the key becomes eligible for processing.
  int64 delay_seconds = 3;
}

message GetKeyStateRequest {
  // The key to retrieve information for
  string key = 1;
}

message KeyState {
  // The key name
  string key = 1;

  // Current status of the key
  enum Status {
    UNKNOWN = 0;
    QUEUED = 1;
    IN_PROGRESS = 2;
    DEAD_LETTER = 3;
  }
  Status status = 2;

  // Priority of the key (if queued or in progress)
  int64 priority = 3;

  // Number of attempts made (if in progress)
  int32 attempts = 4;

  // Time when the key was first queued
  int64 queued_time = 5;

  // Time when the key should be processed (NotBefore)
  int64 not_before_time = 6;
}

// NoRetryDetails is a marker message that indicates that the key should not be retried.
message NoRetryDetails {
  string message = 1; // A message describing why the key should not be retried.
}
